Bug 23142, SIGSEGV in is_strip_section

PR 23142
	* objcopy.c (group_signature): Don't accept groups that use a
	symbol table other than the one we've read.